路由初始化

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,8 +9,9 @@
     "lib": ["esnext", "dom"],
     "types": [
       "@dcloudio/types",
-      // "@types/wechat-miniprogram",
-      // "@uni-helper/uni-app-types"
+      "@uni-helper/uni-ui-types",
+      "@types/wechat-miniprogram",
+      "@uni-helper/uni-app-types"
     ]
   },
   "include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx", "src/**/*.vue"]
