--- a/package.json
+++ b/package.json
@@ -1,4 +1,10 @@
 {
+  "easycom": {
+		"autoscan": true,
+		"custom": {
+			"^uni-(.*)": "@dcloudio/uni-ui/lib/uni-$1/uni-$1.vue"
+		}
+	},
   "name": "uni-preset-vue",
   "version": "0.0.0",
   "scripts": {
@@ -52,6 +58,7 @@
     "@dcloudio/uni-mp-toutiao": "3.0.0-3081220230817001",
     "@dcloudio/uni-mp-weixin": "3.0.0-3081220230817001",
     "@dcloudio/uni-quickapp-webview": "3.0.0-3081220230817001",
+    "@dcloudio/uni-ui": "^1.5.2",
     "vue": "^3.2.45",
     "vue-i18n": "^9.1.9"
   },
@@ -63,8 +70,11 @@
     "@dcloudio/vite-plugin-uni": "3.0.0-3081220230817001",
     "@types/wechat-miniprogram": "^3.4.7",
     "@uni-helper/uni-app-types": "^0.5.12",
+    "@uni-helper/uni-ui-types": "^0.5.12",
     "@vue/runtime-core": "^3.2.45",
     "@vue/tsconfig": "^0.1.3",
+    "sass": "^1.71.1",
+    "sass-loader": "^10.1.1",
     "typescript": "^4.9.4",
     "vite": "4.1.4",
     "vue-tsc": "^1.0.24"
