--- a/package.json
+++ b/package.json
@@ -59,9 +59,11 @@
     "@dcloudio/uni-mp-weixin": "3.0.0-3081220230817001",
     "@dcloudio/uni-quickapp-webview": "3.0.0-3081220230817001",
     "@dcloudio/uni-ui": "^1.5.2",
+    "@dcloudio/uvm": "latest",
     "pinia": "^2.0.33",
     "pinia-plugin-persist": "^1.0.0",
     "pinia-plugin-persistedstate": "^3.2.1",
+    "vant-weapp": "^0.5.29",
     "vue": "^3.2.45",
     "vue-i18n": "^9.1.9"
   },
