--- a/src/manifest.json
+++ b/src/manifest.json
@@ -55,6 +55,10 @@
         "setting": {
             "urlCheck": false
         },
+        "oauth": {
+            "scope": "userInfo",
+            "state": "uniapp"
+        },
         "usingComponents": true,
         "permission": {
             "scope.userLocation": {
