--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "pinia": "^2.0.33",
     "pinia-plugin-persist": "^1.0.0",
     "pinia-plugin-persistedstate": "^3.2.1",
+    "uuid": "^10.0.0",
     "vant-weapp": "^0.5.29",
     "vue": "^3.4.21",
     "vue-i18n": "^9.10.1"
@@ -76,6 +77,7 @@
     "@dcloudio/uni-cli-shared": "3.0.0-4020420240722002",
     "@dcloudio/uni-stacktracey": "3.0.0-4020420240722002",
     "@dcloudio/vite-plugin-uni": "3.0.0-4020420240722002",
+    "@types/uuid": "^10.0.0",
     "@types/wechat-miniprogram": "^3.4.7",
     "@uni-helper/uni-app-types": "^0.5.12",
     "@uni-helper/uni-ui-types": "^0.5.12",
